[package]
name = "amd"
version = "0.2.1"
edition = "2018"
description = "Approximate Minimum Degree ordering"
repository = "https://github.com/rwl/amd_order/"
license = "BSD-3-Clause"
categories = ["algorithms", "mathematics", "science"]
default-run = "simple"

[dependencies]
num-traits = "0.2"

[features]
debug1 = []
debug2 = ["debug1"]
debug3 = ["debug2"]
debug4 = ["debug3"]